fixed image on ios

--- a/components/Square/styles.module.scss
+++ b/components/Square/styles.module.scss
@@ -8,8 +8,7 @@
     border-radius: 1rem;
     
     position:relative;
-    // aspect-ratio: 1/1;
-    // height: 100%;
+    aspect-ratio: 1/1;
 
     img {
         width: 100%;
